--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-
+    <h1>Game of Walls</h1>
     <p>Use the arrow keys to move. Use WSAD to modify the world</p>
 
 <script>
